--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nunjucks": "^3.2.1",
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "^1.16.1",
+    "progressbar.js": "^1.1.0",
     "quill": "^1.3.7",
     "rater-js": "^1.0.1",
     "simple-datatables": "^2.1.13",
