--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.26.11",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "@prettier/plugin-php": "0.14.3",
+    "prettier": "2.0.5"
   }
 }
